[package]
name = "BreachRTS"
version = "0.1.0"
authors = ["potzerus <Potzerus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "unit_test"
path = "src/unit_test.rs"



[dependencies]
piston = "0.49.0"
piston_window = "0.105.0"
image = "0.22.3"
vecmath = "1.0.0"